--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 		"128": "icons/jsfiddle-128x128.png"
 	},
 	"browser_action": {
-		"default_icon": "icon.png",
+		"default_icon": "assets/images/icon.png",
 		"popup": "popup.html"
 	},
 	"permissions": [
