--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
 	"version": "2.0.0",
 	"description": "View your fiddles with their revisions and create fiddles directly from the extension.",
 	"icons": {
-		"16": "icons/jsfiddle-16x16.png",
-		"48": "icons/jsfiddle-48x48.png",
-		"128": "icons/jsfiddle-128x128.png"
+		"16": "icons/icon-16.png",
+		"48": "icons/icon-48.png",
+		"128": "icons/icon-128.png"
 	},
 	"browser_action": {
 		"default_icon": "assets/images/icon.png",
